# fleet-protocol-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
include/bringauto/fleet_protocol/cxx/: BufferAsString.hpp  DeviceID.hpp  KeyValueConfig.hpp  StringAsBuffer.hpp
source/bringauto/fleet_protocol/cxx/: BufferAsString.cpp  DeviceID.cpp  StringAsBuffer.cpp
test/: CMakeLists.txt  README.md
test/lib/memory_management/: CMakeLists.txt
test/lib/memory_management/source/: memory_management.cpp
test/source/: BufferAsStringTest.cpp  DeviceIDTest.cpp  KeyValueConfigTest.cpp  StringAsBufferTest.cpp
test/src/: BufferAsStringTest.cpp  DeviceIDTest.cpp  Example.cpp  KeyValueConfigTest.cpp  StringAsBufferTest.cpp
