CMAKE_MINIMUM_REQUIRED(VERSION 3.25 FATAL_ERROR)
PROJECT(fleet-protocol C CXX)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

SET(CMAKE_CXX_STANDARD 20)

INCLUDE(GNUInstallDirs)
SET(CMAKE_INSTALL_RPATH "$ORIGIN/../${CMAKE_INSTALL_LIBDIR}")

SET(MODULE_MAINTAINER_TARGET_NAME fleet_protocol_cxx_helpers)
SET(MODULE_MAINTAINER_ALIAS_NAME  ${PROJECT_NAME}::cxx_helpers)
SET(COMMON_HEADERS_TARGET         fleet-protocol::common_headers)

OPTION(BRINGAUTO_TESTS "Enable tests" OFF)
OPTION(BRINGAUTO_PACKAGE "Package creation" OFF)
OPTION(BRINGAUTO_INSTALL "Enable install" OFF)
OPTION(BRINGAUTO_SYSTEM_DEP "Enable system dependencies" OFF)
OPTION(BRINGAUTO_SAMPLES "Enable build of sample app, not used in project" OFF)


IF (BRINGAUTO_PACKAGE)
    IF (NOT BRINGAUTO_INSTALL)
        SET(BRINGAUTO_INSTALL ON CACHE BOOL "Forced install due to BRINGAUTO_PACKAGE=ON" FORCE)
        MESSAGE(WARNING "BRINGAUTO_INSTALL is switched to on because of BRINGAUTO_PACKAGE=ON")
    ENDIF ()
ENDIF ()

IF(NOT TARGET ${COMMON_HEADERS_TARGET}) ## TODO revisit
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test/lib/Fleet-Protocol)
    # MESSAGE(FATAL_ERROR "TARGET ${COMMON_HEADERS_TARGET} is not defined!")
ENDIF()

FILE(GLOB_RECURSE source_files ${CMAKE_CURRENT_LIST_DIR}/source/*)
#[[ADD_LIBRARY(${MODULE_MAINTAINER_TARGET_NAME} SHARED
    ${source_files}
)]]

SET(FLEET_PROTOCOL_CXX_HELPERS_VERSION 0.1.0)
CMDEF_ADD_LIBRARY(
        LIBRARY_GROUP ${MODULE_MAINTAINER_TARGET_NAME}
        TYPE STATIC
        SOURCES ${source_files}
        INCLUDE_DIRECTORIES "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include/>" "$<INSTALL_INTERFACE:include/>"

        VERSION ${FLEET_PROTOCOL_CXX_HELPERS_VERSION}
)
#TARGET_INCLUDE_DIRECTORIES(${MODULE_MAINTAINER_TARGET_NAME} PUBLIC "${CMAKE_CURRENT_LIST_DIR}/include")
TARGET_LINK_LIBRARIES("${MODULE_MAINTAINER_TARGET_NAME}-object" PUBLIC
        ${COMMON_HEADERS_TARGET}
)
TARGET_LINK_LIBRARIES("${MODULE_MAINTAINER_TARGET_NAME}-static" PRIVATE
    ${COMMON_HEADERS_TARGET}
)

ADD_LIBRARY(${MODULE_MAINTAINER_ALIAS_NAME} ALIAS "${MODULE_MAINTAINER_TARGET_NAME}-static")

IF (BRINGAUTO_TESTS)
    ENABLE_TESTING()
    #    INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/test/CMakeLists.txt)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test/)
ENDIF (BRINGAUTO_TESTS)